testdata/result/expr/!bad_plus2.sql.txt
--- !bad_plus2.sql
(1 +) + (2 +)

--- Error
syntax error: testdata/input/expr/!bad_plus2.sql:1:5: unexpected token: )

  1:  (1 +) + (2 +)
          ^


syntax error: testdata/input/expr/!bad_plus2.sql:1:13: unexpected token: )

  1:  (1 +) + (2 +)
                  ^


--- AST
&ast.BinaryExpr{
  Op:   "+",
  Left: &ast.ParenExpr{
    Rparen: 4,
    Expr:   &ast.BadNode{
      NodePos: 1,
      NodeEnd: 4,
      Raw:     "1 +",
    },
  },
  Right: &ast.ParenExpr{
    Lparen: 8,
    Rparen: 12,
    Expr:   &ast.BadNode{
      NodePos: 9,
      NodeEnd: 12,
      Raw:     "2 +",
    },
  },
}

--- SQL
(1 +) + (2 +)
